--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,6 +14,6 @@
 		  <a href="/">Home</a>
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
-		<h1>About page will be here</h1>
+		<h1>Blog will be here</h1>
 	</body>
 </html>
